--- a/result/2022-01-05.md
+++ b/result/2022-01-05.md
@@ -39,3 +39,4 @@
 39. [人生特迷惑时刻](https://s.weibo.com//weibo?q=%23%E4%BA%BA%E7%94%9F%E7%89%B9%E8%BF%B7%E6%83%91%E6%97%B6%E5%88%BB%23&Refer=top) 104083
 40. [有个嘴贫的学生有多快乐](https://s.weibo.com//weibo?q=%23%E6%9C%89%E4%B8%AA%E5%98%B4%E8%B4%AB%E7%9A%84%E5%AD%A6%E7%94%9F%E6%9C%89%E5%A4%9A%E5%BF%AB%E4%B9%90%23&Refer=top) 102738
 41. [郑州市民冒雪排队做核酸](https://s.weibo.com//weibo?q=%23%E9%83%91%E5%B7%9E%E5%B8%82%E6%B0%91%E5%86%92%E9%9B%AA%E6%8E%92%E9%98%9F%E5%81%9A%E6%A0%B8%E9%85%B8%23&Refer=top) 61018
+42. [陕西已连续5天未在校园出现确诊病例](https://s.weibo.com//weibo?q=%23%E9%99%95%E8%A5%BF%E5%B7%B2%E8%BF%9E%E7%BB%AD5%E5%A4%A9%E6%9C%AA%E5%9C%A8%E6%A0%A1%E5%9B%AD%E5%87%BA%E7%8E%B0%E7%A1%AE%E8%AF%8A%E7%97%85%E4%BE%8B%23&Refer=top) 38133
